--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
                     </div>
                     <div class="swiper-slide" style="background-image: url('./assets/slide4.jpg')">
                     </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide4a.jpg')">
+                    </div>
                     <div class="swiper-slide" style="background-image: url('./assets/slide5.jpg')">
                     </div>
                     <div class="swiper-slide" style="background-image: url('./assets/slide6.jpg')">
@@ -190,8 +192,6 @@
                     <div class="swiper-slide" style="background-image: url('/assets/slide16.jpg')">
                     </div>
                     <div class="swiper-slide" style="background-image: url('/assets/slide17.jpg')">
-                    </div>
-                    <div class="swiper-slide" style="background-image: url('/assets/slide18.jpg')">
                     </div>
                 </div>
                 <!-- If we need pagination -->
