--- a/register.html
+++ b/register.html
@@ -68,7 +68,7 @@
 
         <!-- <h3 class="font-md">Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button> -->
-        <h1 style="color: orange;">Registerations are currently closed. Thank you for the overwhelming responses!</h1>
+        <h1 style="color: green;">Registerations are currently closed. Thank you for the overwhelming responses!</h1>
         
         <!-- Rules Section -->
         <div class="rules-section">
