--- a/members.html
+++ b/members.html
@@ -25,6 +25,9 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="./rules.html">About</a></li>
                     <li><a href="./register.html">Registrations</a></li>
+                    <li>
+                        <a href="./upload.html">Submissions</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#">
                             <span>More</span>
