--- a/register.html
+++ b/register.html
@@ -32,6 +32,9 @@
                                 <li><a href="./members.html">OC Members</a></li>
                                 <li><a href="./schedule.html">Event Schedule</a></li>
                                 <li><a href="./album.html">Album</a></li>
+                                <li>
+                                    <a href="./upload.html">Submissions</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
