--- a/upload.html
+++ b/upload.html
@@ -62,9 +62,62 @@
         </div>
     </header>
 
+    <style>
+        body {
+            font-family: Arial, sans-serif; /* Use a readable font */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4; /* Light background color */
+        }
+        h3 {
+            color: white; /* White text color */
+            border: 2px solid #6a0dad; /* Purple border */
+            padding: 10px;
+            border-radius: 8px;
+            background-color: #6a0dad; /* Purple background for h3 */
+            margin: 10px 0; /* Space around h3 */
+        }
+        a {
+            background-color: #6a0dad; /* Purple background */
+            border: 2px solid #6a0dad; /* Purple border */
+            color: white; /* White text */
+            padding: 15px 32px; /* Some padding */
+            text-align: center; /* Centered text */
+            text-decoration: none; /* Remove underline */
+            display: inline-block; /* Make the link look like a button */
+            font-size: 16px; /* Button text size */
+            margin: 10px 0; /* Space around button */
+            cursor: pointer; /* Mouse pointer on hover */
+            border-radius: 8px; /* Rounded corners */
+            transition: background-color 0.3s; /* Smooth transition for hover effect */
+        }
+        a:hover {
+            background-color: #5a0c9f; /* Darker purple on hover */
+        }
+    </style>
+</head>
+<body>
     <h3>Criterion Document</h3>
-    <a href="./assets/rulesDoc.pdf" style="background-color: #6a0dad; /* Purple background */ border: none; /* Remove borders */ color: white; /* White text */ padding: 15px 32px; /* Some padding */ text-align: center; /* Centered text */ text-decoration: none; /* Remove underline */ display: inline-block; /* Make the link look like a button */ font-size: 16px; /* Button text size */ margin: 0; /* Remove default margin */ cursor: pointer; /* Mouse pointer on hover */ border-radius: 8px; /* Rounded corners */ transition: background-color 0.3s; /* Smooth transition for hover effect */ padding-bottom: 12px;"> Go to Rules Document </a>
-    <h1>    </h1>
+    <a href="./assets/rulesDoc.pdf">Go to Rules Document</a>
+    <h3>Submit your work here</h3>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSezpNrnYjW3HBCmAAkjG8TjFvZt7Ic8lfseMRS2EWMlx4BkgA/viewform">Submit work here</a>
+    <!-- Footer-->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
+        </div>
+    </footer>
 
-    <h3>Submit your work here<h3>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSezpNrnYjW3HBCmAAkjG8TjFvZt7Ic8lfseMRS2EWMlx4BkgA/viewform" style="background-color: #6a0dad; /* Purple background */ border: none; /* Remove borders */ color: white; /* White text */ padding: 15px 32px; /* Some padding */ text-align: center; /* Centered text */ text-decoration: none; /* Remove underline */ display: inline-block; /* Make the link look like a button */ font-size: 16px; /* Button text size */ margin: 0; /* Remove default margin */ cursor: pointer; /* Mouse pointer on hover */ border-radius: 8px; /* Rounded corners */ transition: background-color 0.3s; /* Smooth transition for hover effect */ padding-bottom: 12px;"> Submit work here </a>
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
+    
+</body>
+</html>
